fix: close button gap

--- a/src/components/navigation/nav-tab-panel.scss
+++ b/src/components/navigation/nav-tab-panel.scss
@@ -18,7 +18,7 @@
       position: absolute;
       right: 0;
       top: 0;
-      width: 36px;
+      width: 40px;
       height: $nav-tab-height;
       background-color: $charcoal-light-6;
       border-style: solid;
